// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar site with wrong sidebar content 1`] = `
"Invalid sidebar file at \\"packages/docusaurus-plugin-content-docs/src/__tests__/__fixtures__/simple-site/wrong-sidebars.json\\".
These sidebar document ids do not exist:
- goku

Available document ids are:
- foo/bar
- foo/baz
- headingAsTitle
- hello
- ipsum
- lorem
- rootAbsoluteSlug
- rootRelativeSlug
- rootResolvedSlug
- rootTryToEscapeSlug
- slugs/absoluteSlug
- slugs/relativeSlug
- slugs/resolvedSlug
- slugs/tryToEscapeSlug"
`;

exports[`simple website content 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "collapsed": true,
          "collapsible": true,
          "items": Array [
            Object {
              "id": "foo/bar",
              "type": "doc",
            },
            Object {
              "id": "foo/baz",
              "type": "doc",
            },
          ],
          "label": "foo",
          "link": undefined,
          "type": "category",
        },
        Object {
          "collapsed": true,
          "collapsible": true,
          "items": Array [
            Object {
              "id": "rootAbsoluteSlug",
              "type": "doc",
            },
            Object {
              "id": "rootRelativeSlug",
              "type": "doc",
            },
            Object {
              "id": "rootResolvedSlug",
              "type": "doc",
            },
            Object {
              "id": "rootTryToEscapeSlug",
              "type": "doc",
            },
          ],
          "label": "Slugs",
          "link": undefined,
          "type": "category",
        },
        Object {
          "id": "headingAsTitle",
          "type": "doc",
        },
        Object {
          "href": "https://github.com",
          "label": "Github",
          "type": "link",
        },
        Object {
          "id": "hello",
          "type": "ref",
        },
      ],
      "label": "Test",
      "link": undefined,
      "type": "category",
    },
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "id": "hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "link": undefined,
      "type": "category",
    },
  ],
}
`;

exports[`simple website content 2`] = `
Object {
  "pluginName": Object {
    "pluginId": Object {
      "path": "/docs",
      "versions": Array [
        Object {
          "docs": Array [
            Object {
              "id": "foo/bar",
              "path": "/docs/foo/bar",
              "sidebar": "docs",
            },
            Object {
              "id": "foo/baz",
              "path": "/docs/foo/bazSlug.html",
              "sidebar": "docs",
            },
            Object {
              "id": "headingAsTitle",
              "path": "/docs/headingAsTitle",
              "sidebar": "docs",
            },
            Object {
              "id": "hello",
              "path": "/docs/",
              "sidebar": "docs",
            },
            Object {
              "id": "ipsum",
              "path": "/docs/ipsum",
              "sidebar": undefined,
            },
            Object {
              "id": "lorem",
              "path": "/docs/lorem",
              "sidebar": undefined,
            },
            Object {
              "id": "rootAbsoluteSlug",
              "path": "/docs/rootAbsoluteSlug",
              "sidebar": "docs",
            },
            Object {
              "id": "rootRelativeSlug",
              "path": "/docs/rootRelativeSlug",
              "sidebar": "docs",
            },
            Object {
              "id": "rootResolvedSlug",
              "path": "/docs/hey/rootResolvedSlug",
              "sidebar": "docs",
            },
            Object {
              "id": "rootTryToEscapeSlug",
              "path": "/docs/rootTryToEscapeSlug",
              "sidebar": "docs",
            },
            Object {
              "id": "slugs/absoluteSlug",
              "path": "/docs/absoluteSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/relativeSlug",
              "path": "/docs/slugs/relativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/resolvedSlug",
              "path": "/docs/slugs/hey/resolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/tryToEscapeSlug",
              "path": "/docs/tryToEscapeSlug",
              "sidebar": undefined,
            },
          ],
          "isLast": true,
          "label": "Next",
          "mainDocId": "hello",
          "name": "current",
          "path": "/docs",
        },
      ],
    },
  },
}
`;

exports[`simple website content: data 1`] = `
Object {
  "site-docs-foo-bar-md-8c2.json": "{
  \\"unversionedId\\": \\"foo/bar\\",
  \\"id\\": \\"foo/bar\\",
  \\"title\\": \\"Bar\\",
  \\"description\\": \\"This is custom description\\",
  \\"source\\": \\"@site/docs/foo/bar.md\\",
  \\"sourceDirName\\": \\"foo\\",
  \\"slug\\": \\"/foo/bar\\",
  \\"permalink\\": \\"/docs/foo/bar\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"id\\": \\"bar\\",
    \\"title\\": \\"Bar\\",
    \\"description\\": \\"This is custom description\\"
  },
  \\"sidebar\\": \\"docs\\",
  \\"next\\": {
    \\"title\\": \\"baz pagination_label\\",
    \\"permalink\\": \\"/docs/foo/bazSlug.html\\"
  }
}",
  "site-docs-foo-baz-md-a69.json": "{
  \\"unversionedId\\": \\"foo/baz\\",
  \\"id\\": \\"foo/baz\\",
  \\"title\\": \\"baz\\",
  \\"description\\": \\"Images\\",
  \\"source\\": \\"@site/docs/foo/baz.md\\",
  \\"sourceDirName\\": \\"foo\\",
  \\"slug\\": \\"/foo/bazSlug.html\\",
  \\"permalink\\": \\"/docs/foo/bazSlug.html\\",
  \\"tags\\": [
    {
      \\"label\\": \\"tag 1\\",
      \\"permalink\\": \\"/docs/tags/tag-1\\"
    },
    {
      \\"label\\": \\"tag 2\\",
      \\"permalink\\": \\"/docs/tags/tag2-custom-permalink\\"
    }
  ],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"id\\": \\"baz\\",
    \\"title\\": \\"baz\\",
    \\"slug\\": \\"bazSlug.html\\",
    \\"pagination_label\\": \\"baz pagination_label\\",
    \\"tags\\": [
      \\"tag 1\\",
      \\"tag-1\\",
      {
        \\"label\\": \\"tag 2\\",
        \\"permalink\\": \\"tag2-custom-permalink\\"
      }
    ]
  },
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"Bar\\",
    \\"permalink\\": \\"/docs/foo/bar\\"
  },
  \\"next\\": {
    \\"title\\": \\"rootAbsoluteSlug\\",
    \\"permalink\\": \\"/docs/rootAbsoluteSlug\\"
  }
}",
  "site-docs-heading-as-title-md-c6d.json": "{
  \\"unversionedId\\": \\"headingAsTitle\\",
  \\"id\\": \\"headingAsTitle\\",
  \\"title\\": \\"My heading as title\\",
  \\"description\\": \\"\\",
  \\"source\\": \\"@site/docs/headingAsTitle.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/headingAsTitle\\",
  \\"permalink\\": \\"/docs/headingAsTitle\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {},
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"rootTryToEscapeSlug\\",
    \\"permalink\\": \\"/docs/rootTryToEscapeSlug\\"
  },
  \\"next\\": {
    \\"title\\": \\"Hello sidebar_label\\",
    \\"permalink\\": \\"/docs/\\"
  }
}",
  "site-docs-hello-md-9df.json": "{
  \\"unversionedId\\": \\"hello\\",
  \\"id\\": \\"hello\\",
  \\"title\\": \\"Hello, World !\\",
  \\"description\\": \\"Hi, Endilie here :)\\",
  \\"source\\": \\"@site/docs/hello.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/\\",
  \\"permalink\\": \\"/docs/\\",
  \\"tags\\": [
    {
      \\"label\\": \\"tag-1\\",
      \\"permalink\\": \\"/docs/tags/tag-1\\"
    },
    {
      \\"label\\": \\"tag 3\\",
      \\"permalink\\": \\"/docs/tags/tag-3\\"
    }
  ],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"id\\": \\"hello\\",
    \\"title\\": \\"Hello, World !\\",
    \\"sidebar_label\\": \\"Hello sidebar_label\\",
    \\"tags\\": [
      \\"tag-1\\",
      \\"tag 3\\"
    ],
    \\"slug\\": \\"/\\"
  },
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"My heading as title\\",
    \\"permalink\\": \\"/docs/headingAsTitle\\"
  }
}",
  "site-docs-ipsum-md-c61.json": "{
  \\"unversionedId\\": \\"ipsum\\",
  \\"id\\": \\"ipsum\\",
  \\"title\\": \\"ipsum\\",
  \\"description\\": \\"Lorem ipsum.\\",
  \\"source\\": \\"@site/docs/ipsum.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/ipsum\\",
  \\"permalink\\": \\"/docs/ipsum\\",
  \\"editUrl\\": null,
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"custom_edit_url\\": null
  }
}",
  "site-docs-lorem-md-b27.json": "{
  \\"unversionedId\\": \\"lorem\\",
  \\"id\\": \\"lorem\\",
  \\"title\\": \\"lorem\\",
  \\"description\\": \\"Lorem ipsum.\\",
  \\"source\\": \\"@site/docs/lorem.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/lorem\\",
  \\"permalink\\": \\"/docs/lorem\\",
  \\"editUrl\\": \\"https://github.com/customUrl/docs/lorem.md\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"custom_edit_url\\": \\"https://github.com/customUrl/docs/lorem.md\\",
    \\"unrelated_frontmatter\\": \\"won't be part of metadata\\"
  }
}",
  "site-docs-root-absolute-slug-md-db5.json": "{
  \\"unversionedId\\": \\"rootAbsoluteSlug\\",
  \\"id\\": \\"rootAbsoluteSlug\\",
  \\"title\\": \\"rootAbsoluteSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/rootAbsoluteSlug.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/rootAbsoluteSlug\\",
  \\"permalink\\": \\"/docs/rootAbsoluteSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"/rootAbsoluteSlug\\",
    \\"pagination_next\\": \\"headingAsTitle\\",
    \\"pagination_prev\\": \\"foo/baz\\"
  },
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"baz pagination_label\\",
    \\"permalink\\": \\"/docs/foo/bazSlug.html\\"
  },
  \\"next\\": {
    \\"title\\": \\"My heading as title\\",
    \\"permalink\\": \\"/docs/headingAsTitle\\"
  }
}",
  "site-docs-root-relative-slug-md-3dd.json": "{
  \\"unversionedId\\": \\"rootRelativeSlug\\",
  \\"id\\": \\"rootRelativeSlug\\",
  \\"title\\": \\"rootRelativeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/rootRelativeSlug.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/rootRelativeSlug\\",
  \\"permalink\\": \\"/docs/rootRelativeSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"rootRelativeSlug\\",
    \\"pagination_next\\": \\"headingAsTitle\\",
    \\"pagination_prev\\": \\"foo/baz\\"
  },
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"baz pagination_label\\",
    \\"permalink\\": \\"/docs/foo/bazSlug.html\\"
  },
  \\"next\\": {
    \\"title\\": \\"My heading as title\\",
    \\"permalink\\": \\"/docs/headingAsTitle\\"
  }
}",
  "site-docs-root-resolved-slug-md-4d1.json": "{
  \\"unversionedId\\": \\"rootResolvedSlug\\",
  \\"id\\": \\"rootResolvedSlug\\",
  \\"title\\": \\"rootResolvedSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/rootResolvedSlug.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/hey/rootResolvedSlug\\",
  \\"permalink\\": \\"/docs/hey/rootResolvedSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"./hey/ho/../rootResolvedSlug\\",
    \\"pagination_next\\": \\"headingAsTitle\\",
    \\"pagination_prev\\": \\"foo/baz\\"
  },
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"baz pagination_label\\",
    \\"permalink\\": \\"/docs/foo/bazSlug.html\\"
  },
  \\"next\\": {
    \\"title\\": \\"My heading as title\\",
    \\"permalink\\": \\"/docs/headingAsTitle\\"
  }
}",
  "site-docs-root-try-to-escape-slug-md-9ee.json": "{
  \\"unversionedId\\": \\"rootTryToEscapeSlug\\",
  \\"id\\": \\"rootTryToEscapeSlug\\",
  \\"title\\": \\"rootTryToEscapeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/rootTryToEscapeSlug.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/rootTryToEscapeSlug\\",
  \\"permalink\\": \\"/docs/rootTryToEscapeSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"../../../../../../../../rootTryToEscapeSlug\\",
    \\"pagination_next\\": \\"headingAsTitle\\",
    \\"pagination_prev\\": \\"foo/baz\\"
  },
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"baz pagination_label\\",
    \\"permalink\\": \\"/docs/foo/bazSlug.html\\"
  },
  \\"next\\": {
    \\"title\\": \\"My heading as title\\",
    \\"permalink\\": \\"/docs/headingAsTitle\\"
  }
}",
  "site-docs-slugs-absolute-slug-md-4e8.json": "{
  \\"unversionedId\\": \\"slugs/absoluteSlug\\",
  \\"id\\": \\"slugs/absoluteSlug\\",
  \\"title\\": \\"absoluteSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/absoluteSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/absoluteSlug\\",
  \\"permalink\\": \\"/docs/absoluteSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"/absoluteSlug\\"
  }
}",
  "site-docs-slugs-relative-slug-md-d1c.json": "{
  \\"unversionedId\\": \\"slugs/relativeSlug\\",
  \\"id\\": \\"slugs/relativeSlug\\",
  \\"title\\": \\"relativeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/relativeSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/slugs/relativeSlug\\",
  \\"permalink\\": \\"/docs/slugs/relativeSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"relativeSlug\\"
  }
}",
  "site-docs-slugs-resolved-slug-md-02b.json": "{
  \\"unversionedId\\": \\"slugs/resolvedSlug\\",
  \\"id\\": \\"slugs/resolvedSlug\\",
  \\"title\\": \\"resolvedSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/resolvedSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/slugs/hey/resolvedSlug\\",
  \\"permalink\\": \\"/docs/slugs/hey/resolvedSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"./hey/ho/../resolvedSlug\\"
  }
}",
  "site-docs-slugs-try-to-escape-slug-md-70d.json": "{
  \\"unversionedId\\": \\"slugs/tryToEscapeSlug\\",
  \\"id\\": \\"slugs/tryToEscapeSlug\\",
  \\"title\\": \\"tryToEscapeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/tryToEscapeSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/tryToEscapeSlug\\",
  \\"permalink\\": \\"/docs/tryToEscapeSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"../../../../../../../../tryToEscapeSlug\\"
  }
}",
  "tag-docs-tags-tag-1-b3f.json": "{
  \\"name\\": \\"tag 1\\",
  \\"permalink\\": \\"/docs/tags/tag-1\\",
  \\"docs\\": [
    {
      \\"id\\": \\"foo/baz\\",
      \\"title\\": \\"baz\\",
      \\"description\\": \\"Images\\",
      \\"permalink\\": \\"/docs/foo/bazSlug.html\\"
    },
    {
      \\"id\\": \\"hello\\",
      \\"title\\": \\"Hello, World !\\",
      \\"description\\": \\"Hi, Endilie here :)\\",
      \\"permalink\\": \\"/docs/\\"
    }
  ],
  \\"allTagsPath\\": \\"/docs/tags\\"
}",
  "tag-docs-tags-tag-2-custom-permalink-825.json": "{
  \\"name\\": \\"tag 2\\",
  \\"permalink\\": \\"/docs/tags/tag2-custom-permalink\\",
  \\"docs\\": [
    {
      \\"id\\": \\"foo/baz\\",
      \\"title\\": \\"baz\\",
      \\"description\\": \\"Images\\",
      \\"permalink\\": \\"/docs/foo/bazSlug.html\\"
    }
  ],
  \\"allTagsPath\\": \\"/docs/tags\\"
}",
  "tag-docs-tags-tag-3-ab5.json": "{
  \\"name\\": \\"tag 3\\",
  \\"permalink\\": \\"/docs/tags/tag-3\\",
  \\"docs\\": [
    {
      \\"id\\": \\"hello\\",
      \\"title\\": \\"Hello, World !\\",
      \\"description\\": \\"Hi, Endilie here :)\\",
      \\"permalink\\": \\"/docs/\\"
    }
  ],
  \\"allTagsPath\\": \\"/docs/tags\\"
}",
  "tags-list-current-prop-15a.json": "[
  {
    \\"name\\": \\"tag 1\\",
    \\"permalink\\": \\"/docs/tags/tag-1\\",
    \\"count\\": 2
  },
  {
    \\"name\\": \\"tag 2\\",
    \\"permalink\\": \\"/docs/tags/tag2-custom-permalink\\",
    \\"count\\": 1
  },
  {
    \\"name\\": \\"tag 3\\",
    \\"permalink\\": \\"/docs/tags/tag-3\\",
    \\"count\\": 1
  }
]",
  "version-current-metadata-prop-751.json": "{
  \\"pluginId\\": \\"default\\",
  \\"version\\": \\"current\\",
  \\"label\\": \\"Next\\",
  \\"banner\\": null,
  \\"badge\\": false,
  \\"className\\": \\"docs-version-current\\",
  \\"isLast\\": true,
  \\"docsSidebars\\": {
    \\"docs\\": [
      {
        \\"type\\": \\"category\\",
        \\"collapsed\\": true,
        \\"collapsible\\": true,
        \\"label\\": \\"Test\\",
        \\"items\\": [
          {
            \\"type\\": \\"category\\",
            \\"label\\": \\"foo\\",
            \\"items\\": [
              {
                \\"type\\": \\"link\\",
                \\"label\\": \\"Bar\\",
                \\"href\\": \\"/docs/foo/bar\\",
                \\"docId\\": \\"foo/bar\\"
              },
              {
                \\"type\\": \\"link\\",
                \\"label\\": \\"baz\\",
                \\"href\\": \\"/docs/foo/bazSlug.html\\",
                \\"docId\\": \\"foo/baz\\"
              }
            ],
            \\"collapsible\\": true,
            \\"collapsed\\": true
          },
          {
            \\"type\\": \\"category\\",
            \\"label\\": \\"Slugs\\",
            \\"items\\": [
              {
                \\"type\\": \\"link\\",
                \\"label\\": \\"rootAbsoluteSlug\\",
                \\"href\\": \\"/docs/rootAbsoluteSlug\\",
                \\"docId\\": \\"rootAbsoluteSlug\\"
              },
              {
                \\"type\\": \\"link\\",
                \\"label\\": \\"rootRelativeSlug\\",
                \\"href\\": \\"/docs/rootRelativeSlug\\",
                \\"docId\\": \\"rootRelativeSlug\\"
              },
              {
                \\"type\\": \\"link\\",
                \\"label\\": \\"rootResolvedSlug\\",
                \\"href\\": \\"/docs/hey/rootResolvedSlug\\",
                \\"docId\\": \\"rootResolvedSlug\\"
              },
              {
                \\"type\\": \\"link\\",
                \\"label\\": \\"rootTryToEscapeSlug\\",
                \\"href\\": \\"/docs/rootTryToEscapeSlug\\",
                \\"docId\\": \\"rootTryToEscapeSlug\\"
              }
            ],
            \\"collapsible\\": true,
            \\"collapsed\\": true
          },
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"My heading as title\\",
            \\"href\\": \\"/docs/headingAsTitle\\",
            \\"docId\\": \\"headingAsTitle\\"
          },
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"Github\\",
            \\"href\\": \\"https://github.com\\"
          },
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"Hello sidebar_label\\",
            \\"href\\": \\"/docs/\\",
            \\"docId\\": \\"hello\\"
          }
        ]
      },
      {
        \\"type\\": \\"category\\",
        \\"collapsed\\": true,
        \\"collapsible\\": true,
        \\"label\\": \\"Guides\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"Hello sidebar_label\\",
            \\"href\\": \\"/docs/\\",
            \\"docId\\": \\"hello\\"
          }
        ]
      }
    ]
  },
  \\"docs\\": {
    \\"foo/bar\\": {
      \\"id\\": \\"foo/bar\\",
      \\"title\\": \\"Bar\\",
      \\"description\\": \\"This is custom description\\",
      \\"sidebar\\": \\"docs\\"
    },
    \\"foo/baz\\": {
      \\"id\\": \\"foo/baz\\",
      \\"title\\": \\"baz\\",
      \\"description\\": \\"Images\\",
      \\"sidebar\\": \\"docs\\"
    },
    \\"headingAsTitle\\": {
      \\"id\\": \\"headingAsTitle\\",
      \\"title\\": \\"My heading as title\\",
      \\"description\\": \\"\\",
      \\"sidebar\\": \\"docs\\"
    },
    \\"hello\\": {
      \\"id\\": \\"hello\\",
      \\"title\\": \\"Hello, World !\\",
      \\"description\\": \\"Hi, Endilie here :)\\",
      \\"sidebar\\": \\"docs\\"
    },
    \\"ipsum\\": {
      \\"id\\": \\"ipsum\\",
      \\"title\\": \\"ipsum\\",
      \\"description\\": \\"Lorem ipsum.\\"
    },
    \\"lorem\\": {
      \\"id\\": \\"lorem\\",
      \\"title\\": \\"lorem\\",
      \\"description\\": \\"Lorem ipsum.\\"
    },
    \\"rootAbsoluteSlug\\": {
      \\"id\\": \\"rootAbsoluteSlug\\",
      \\"title\\": \\"rootAbsoluteSlug\\",
      \\"description\\": \\"Lorem\\",
      \\"sidebar\\": \\"docs\\"
    },
    \\"rootRelativeSlug\\": {
      \\"id\\": \\"rootRelativeSlug\\",
      \\"title\\": \\"rootRelativeSlug\\",
      \\"description\\": \\"Lorem\\",
      \\"sidebar\\": \\"docs\\"
    },
    \\"rootResolvedSlug\\": {
      \\"id\\": \\"rootResolvedSlug\\",
      \\"title\\": \\"rootResolvedSlug\\",
      \\"description\\": \\"Lorem\\",
      \\"sidebar\\": \\"docs\\"
    },
    \\"rootTryToEscapeSlug\\": {
      \\"id\\": \\"rootTryToEscapeSlug\\",
      \\"title\\": \\"rootTryToEscapeSlug\\",
      \\"description\\": \\"Lorem\\",
      \\"sidebar\\": \\"docs\\"
    },
    \\"slugs/absoluteSlug\\": {
      \\"id\\": \\"slugs/absoluteSlug\\",
      \\"title\\": \\"absoluteSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"slugs/relativeSlug\\": {
      \\"id\\": \\"slugs/relativeSlug\\",
      \\"title\\": \\"relativeSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"slugs/resolvedSlug\\": {
      \\"id\\": \\"slugs/resolvedSlug\\",
      \\"title\\": \\"resolvedSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"slugs/tryToEscapeSlug\\": {
      \\"id\\": \\"slugs/tryToEscapeSlug\\",
      \\"title\\": \\"tryToEscapeSlug\\",
      \\"description\\": \\"Lorem\\"
    }
  }
}",
}
`;

exports[`simple website content: global data 1`] = `
Object {
  "pluginName": Object {
    "pluginId": Object {
      "path": "/docs",
      "versions": Array [
        Object {
          "docs": Array [
            Object {
              "id": "foo/bar",
              "path": "/docs/foo/bar",
              "sidebar": "docs",
            },
            Object {
              "id": "foo/baz",
              "path": "/docs/foo/bazSlug.html",
              "sidebar": "docs",
            },
            Object {
              "id": "headingAsTitle",
              "path": "/docs/headingAsTitle",
              "sidebar": "docs",
            },
            Object {
              "id": "hello",
              "path": "/docs/",
              "sidebar": "docs",
            },
            Object {
              "id": "ipsum",
              "path": "/docs/ipsum",
              "sidebar": undefined,
            },
            Object {
              "id": "lorem",
              "path": "/docs/lorem",
              "sidebar": undefined,
            },
            Object {
              "id": "rootAbsoluteSlug",
              "path": "/docs/rootAbsoluteSlug",
              "sidebar": "docs",
            },
            Object {
              "id": "rootRelativeSlug",
              "path": "/docs/rootRelativeSlug",
              "sidebar": "docs",
            },
            Object {
              "id": "rootResolvedSlug",
              "path": "/docs/hey/rootResolvedSlug",
              "sidebar": "docs",
            },
            Object {
              "id": "rootTryToEscapeSlug",
              "path": "/docs/rootTryToEscapeSlug",
              "sidebar": "docs",
            },
            Object {
              "id": "slugs/absoluteSlug",
              "path": "/docs/absoluteSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/relativeSlug",
              "path": "/docs/slugs/relativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/resolvedSlug",
              "path": "/docs/slugs/hey/resolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/tryToEscapeSlug",
              "path": "/docs/tryToEscapeSlug",
              "sidebar": undefined,
            },
          ],
          "isLast": true,
          "label": "Next",
          "mainDocId": "hello",
          "name": "current",
          "path": "/docs",
        },
      ],
    },
  },
}
`;

exports[`simple website content: route config 1`] = `
Array [
  Object {
    "component": "@theme/DocTagsListPage",
    "exact": true,
    "modules": Object {
      "tags": "~docs/tags-list-current-prop-15a.json",
    },
    "path": "/docs/tags",
  },
  Object {
    "component": "@theme/DocTagDocListPage",
    "exact": true,
    "modules": Object {
      "tag": "~docs/tag-docs-tags-tag-1-b3f.json",
    },
    "path": "/docs/tags/tag-1",
  },
  Object {
    "component": "@theme/DocTagDocListPage",
    "exact": true,
    "modules": Object {
      "tag": "~docs/tag-docs-tags-tag-3-ab5.json",
    },
    "path": "/docs/tags/tag-3",
  },
  Object {
    "component": "@theme/DocTagDocListPage",
    "exact": true,
    "modules": Object {
      "tag": "~docs/tag-docs-tags-tag-2-custom-permalink-825.json",
    },
    "path": "/docs/tags/tag2-custom-permalink",
  },
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-current-metadata-prop-751.json",
    },
    "path": "/docs",
    "priority": -1,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/hello.md",
        },
        "path": "/docs/",
        "sidebar": "docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/slugs/absoluteSlug.md",
        },
        "path": "/docs/absoluteSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/foo/bar.md",
        },
        "path": "/docs/foo/bar",
        "sidebar": "docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/foo/baz.md",
        },
        "path": "/docs/foo/bazSlug.html",
        "sidebar": "docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/headingAsTitle.md",
        },
        "path": "/docs/headingAsTitle",
        "sidebar": "docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/rootResolvedSlug.md",
        },
        "path": "/docs/hey/rootResolvedSlug",
        "sidebar": "docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/ipsum.md",
        },
        "path": "/docs/ipsum",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/lorem.md",
        },
        "path": "/docs/lorem",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/rootAbsoluteSlug.md",
        },
        "path": "/docs/rootAbsoluteSlug",
        "sidebar": "docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/rootRelativeSlug.md",
        },
        "path": "/docs/rootRelativeSlug",
        "sidebar": "docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/rootTryToEscapeSlug.md",
        },
        "path": "/docs/rootTryToEscapeSlug",
        "sidebar": "docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/slugs/resolvedSlug.md",
        },
        "path": "/docs/slugs/hey/resolvedSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/slugs/relativeSlug.md",
        },
        "path": "/docs/slugs/relativeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/slugs/tryToEscapeSlug.md",
        },
        "path": "/docs/tryToEscapeSlug",
      },
    ],
  },
]
`;

exports[`site with custom sidebar items generator sidebarItemsGenerator is called with appropriate data 1`] = `
Object {
  "defaultSidebarItemsGenerator": [Function],
  "docs": Array [
    Object {
      "frontMatter": Object {},
      "id": "API/Core APIs/Client API",
      "sidebarPosition": 0,
      "source": "@site/docs/3-API/01_Core APIs/0 --- Client API.md",
      "sourceDirName": "3-API/01_Core APIs",
      "unversionedId": "API/Core APIs/Client API",
    },
    Object {
      "frontMatter": Object {},
      "id": "API/Core APIs/Server API",
      "sidebarPosition": 1,
      "source": "@site/docs/3-API/01_Core APIs/1 --- Server API.md",
      "sourceDirName": "3-API/01_Core APIs",
      "unversionedId": "API/Core APIs/Server API",
    },
    Object {
      "frontMatter": Object {},
      "id": "API/Extension APIs/Plugin API",
      "sidebarPosition": 0,
      "source": "@site/docs/3-API/02_Extension APIs/0. Plugin API.md",
      "sourceDirName": "3-API/02_Extension APIs",
      "unversionedId": "API/Extension APIs/Plugin API",
    },
    Object {
      "frontMatter": Object {},
      "id": "API/Extension APIs/Theme API",
      "sidebarPosition": 1,
      "source": "@site/docs/3-API/02_Extension APIs/1. Theme API.md",
      "sourceDirName": "3-API/02_Extension APIs",
      "unversionedId": "API/Extension APIs/Theme API",
    },
    Object {
      "frontMatter": Object {},
      "id": "API/api-end",
      "sidebarPosition": 3,
      "source": "@site/docs/3-API/03_api-end.md",
      "sourceDirName": "3-API",
      "unversionedId": "API/api-end",
    },
    Object {
      "frontMatter": Object {},
      "id": "API/api-overview",
      "sidebarPosition": 0,
      "source": "@site/docs/3-API/00_api-overview.md",
      "sourceDirName": "3-API",
      "unversionedId": "API/api-overview",
    },
    Object {
      "frontMatter": Object {
        "id": "guide1",
        "sidebar_position": 1,
      },
      "id": "Guides/guide1",
      "sidebarPosition": 1,
      "source": "@site/docs/Guides/z-guide1.md",
      "sourceDirName": "Guides",
      "unversionedId": "Guides/guide1",
    },
    Object {
      "frontMatter": Object {
        "id": "guide2",
      },
      "id": "Guides/guide2",
      "sidebarPosition": 2,
      "source": "@site/docs/Guides/02-guide2.md",
      "sourceDirName": "Guides",
      "unversionedId": "Guides/guide2",
    },
    Object {
      "frontMatter": Object {
        "id": "guide2.5",
        "sidebar_position": 2.5,
      },
      "id": "Guides/guide2.5",
      "sidebarPosition": 2.5,
      "source": "@site/docs/Guides/0-guide2.5.md",
      "sourceDirName": "Guides",
      "unversionedId": "Guides/guide2.5",
    },
    Object {
      "frontMatter": Object {
        "id": "guide3",
        "sidebar_position": 3,
      },
      "id": "Guides/guide3",
      "sidebarPosition": 3,
      "source": "@site/docs/Guides/guide3.md",
      "sourceDirName": "Guides",
      "unversionedId": "Guides/guide3",
    },
    Object {
      "frontMatter": Object {
        "id": "guide4",
      },
      "id": "Guides/guide4",
      "sidebarPosition": undefined,
      "source": "@site/docs/Guides/a-guide4.md",
      "sourceDirName": "Guides",
      "unversionedId": "Guides/guide4",
    },
    Object {
      "frontMatter": Object {
        "id": "guide5",
      },
      "id": "Guides/guide5",
      "sidebarPosition": undefined,
      "source": "@site/docs/Guides/b-guide5.md",
      "sourceDirName": "Guides",
      "unversionedId": "Guides/guide5",
    },
    Object {
      "frontMatter": Object {},
      "id": "getting-started",
      "sidebarPosition": 0,
      "source": "@site/docs/0-getting-started.md",
      "sourceDirName": ".",
      "unversionedId": "getting-started",
    },
    Object {
      "frontMatter": Object {},
      "id": "installation",
      "sidebarPosition": 1,
      "source": "@site/docs/1-installation.md",
      "sourceDirName": ".",
      "unversionedId": "installation",
    },
  ],
  "item": Object {
    "dirName": ".",
    "type": "autogenerated",
  },
  "numberPrefixParser": [Function],
  "options": Object {
    "sidebarCollapsed": true,
    "sidebarCollapsible": true,
  },
  "version": Object {
    "contentPath": "docs",
    "versionName": "current",
  },
}
`;

exports[`versioned website (community) content: 100 version sidebars 1`] = `
Object {
  "version-1.0.0/community": Array [
    Object {
      "id": "version-1.0.0/team",
      "type": "doc",
    },
  ],
}
`;

exports[`versioned website (community) content: current version sidebars 1`] = `
Object {
  "community": Array [
    Object {
      "id": "team",
      "type": "doc",
    },
  ],
}
`;

exports[`versioned website (community) content: data 1`] = `
Object {
  "site-community-versioned-docs-version-1-0-0-team-md-359.json": "{
  \\"unversionedId\\": \\"team\\",
  \\"id\\": \\"version-1.0.0/team\\",
  \\"title\\": \\"team\\",
  \\"description\\": \\"Team 1.0.0\\",
  \\"source\\": \\"@site/community_versioned_docs/version-1.0.0/team.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/team\\",
  \\"permalink\\": \\"/community/team\\",
  \\"tags\\": [],
  \\"version\\": \\"1.0.0\\",
  \\"frontMatter\\": {},
  \\"sidebar\\": \\"version-1.0.0/community\\"
}",
  "site-i-18-n-en-docusaurus-plugin-content-docs-community-current-team-md-7e5.json": "{
  \\"unversionedId\\": \\"team\\",
  \\"id\\": \\"team\\",
  \\"title\\": \\"Team title translated\\",
  \\"description\\": \\"Team current version (translated)\\",
  \\"source\\": \\"@site/i18n/en/docusaurus-plugin-content-docs-community/current/team.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/team\\",
  \\"permalink\\": \\"/community/next/team\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"title\\": \\"Team title translated\\"
  },
  \\"sidebar\\": \\"community\\"
}",
  "version-1-0-0-metadata-prop-608.json": "{
  \\"pluginId\\": \\"community\\",
  \\"version\\": \\"1.0.0\\",
  \\"label\\": \\"1.0.0\\",
  \\"banner\\": null,
  \\"badge\\": true,
  \\"className\\": \\"docs-version-1.0.0\\",
  \\"isLast\\": true,
  \\"docsSidebars\\": {
    \\"version-1.0.0/community\\": [
      {
        \\"type\\": \\"link\\",
        \\"label\\": \\"team\\",
        \\"href\\": \\"/community/team\\",
        \\"docId\\": \\"team\\"
      }
    ]
  },
  \\"docs\\": {
    \\"team\\": {
      \\"id\\": \\"team\\",
      \\"title\\": \\"team\\",
      \\"description\\": \\"Team 1.0.0\\",
      \\"sidebar\\": \\"version-1.0.0/community\\"
    }
  }
}",
  "version-current-metadata-prop-751.json": "{
  \\"pluginId\\": \\"community\\",
  \\"version\\": \\"current\\",
  \\"label\\": \\"Next\\",
  \\"banner\\": \\"unreleased\\",
  \\"badge\\": true,
  \\"className\\": \\"docs-version-current\\",
  \\"isLast\\": false,
  \\"docsSidebars\\": {
    \\"community\\": [
      {
        \\"type\\": \\"link\\",
        \\"label\\": \\"Team title translated\\",
        \\"href\\": \\"/community/next/team\\",
        \\"docId\\": \\"team\\"
      }
    ]
  },
  \\"docs\\": {
    \\"team\\": {
      \\"id\\": \\"team\\",
      \\"title\\": \\"Team title translated\\",
      \\"description\\": \\"Team current version (translated)\\",
      \\"sidebar\\": \\"community\\"
    }
  }
}",
}
`;

exports[`versioned website (community) content: global data 1`] = `
Object {
  "pluginName": Object {
    "pluginId": Object {
      "path": "/community",
      "versions": Array [
        Object {
          "docs": Array [
            Object {
              "id": "team",
              "path": "/community/next/team",
              "sidebar": "community",
            },
          ],
          "isLast": false,
          "label": "Next",
          "mainDocId": "team",
          "name": "current",
          "path": "/community/next",
        },
        Object {
          "docs": Array [
            Object {
              "id": "team",
              "path": "/community/team",
              "sidebar": "version-1.0.0/community",
            },
          ],
          "isLast": true,
          "label": "1.0.0",
          "mainDocId": "team",
          "name": "1.0.0",
          "path": "/community",
        },
      ],
    },
  },
}
`;

exports[`versioned website (community) content: route config 1`] = `
Array [
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-current-metadata-prop-751.json",
    },
    "path": "/community/next",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/i18n/en/docusaurus-plugin-content-docs-community/current/team.md",
        },
        "path": "/community/next/team",
        "sidebar": "community",
      },
    ],
  },
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-1-0-0-metadata-prop-608.json",
    },
    "path": "/community",
    "priority": -1,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/community_versioned_docs/version-1.0.0/team.md",
        },
        "path": "/community/team",
        "sidebar": "version-1.0.0/community",
      },
    ],
  },
]
`;

exports[`versioned website content: 100 version sidebars 1`] = `
Object {
  "version-1.0.0/docs": Array [
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "id": "version-1.0.0/foo/bar",
          "type": "doc",
        },
        Object {
          "id": "version-1.0.0/foo/baz",
          "type": "doc",
        },
      ],
      "label": "Test",
      "link": undefined,
      "type": "category",
    },
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "id": "version-1.0.0/hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "link": undefined,
      "type": "category",
    },
  ],
}
`;

exports[`versioned website content: 101 version sidebars 1`] = `
Object {
  "VersionedSideBarNameDoesNotMatter/docs": Array [
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "id": "foo/bar",
          "type": "doc",
        },
      ],
      "label": "Test",
      "link": undefined,
      "type": "category",
    },
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "id": "version-1.0.1/hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "link": undefined,
      "type": "category",
    },
  ],
}
`;

exports[`versioned website content: current version sidebars 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "id": "foo/bar",
          "type": "doc",
        },
      ],
      "label": "Test",
      "link": undefined,
      "type": "category",
    },
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "id": "hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "link": undefined,
      "type": "category",
    },
  ],
}
`;

exports[`versioned website content: data 1`] = `
Object {
  "site-docs-foo-bar-md-8c2.json": "{
  \\"unversionedId\\": \\"foo/bar\\",
  \\"id\\": \\"foo/bar\\",
  \\"title\\": \\"bar\\",
  \\"description\\": \\"This is next version of bar.\\",
  \\"source\\": \\"@site/docs/foo/bar.md\\",
  \\"sourceDirName\\": \\"foo\\",
  \\"slug\\": \\"/foo/barSlug\\",
  \\"permalink\\": \\"/docs/next/foo/barSlug\\",
  \\"tags\\": [
    {
      \\"label\\": \\"barTag 1\\",
      \\"permalink\\": \\"/docs/next/tags/bar-tag-1\\"
    },
    {
      \\"label\\": \\"barTag-2\\",
      \\"permalink\\": \\"/docs/next/tags/bar-tag-2\\"
    },
    {
      \\"label\\": \\"barTag 3\\",
      \\"permalink\\": \\"/docs/next/tags/barTag-3-permalink\\"
    }
  ],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"barSlug\\",
    \\"tags\\": [
      \\"barTag 1\\",
      \\"barTag-2\\",
      {
        \\"label\\": \\"barTag 3\\",
        \\"permalink\\": \\"barTag-3-permalink\\"
      }
    ]
  },
  \\"sidebar\\": \\"docs\\",
  \\"next\\": {
    \\"title\\": \\"hello\\",
    \\"permalink\\": \\"/docs/next/\\"
  }
}",
  "site-docs-hello-md-9df.json": "{
  \\"unversionedId\\": \\"hello\\",
  \\"id\\": \\"hello\\",
  \\"title\\": \\"hello\\",
  \\"description\\": \\"Hello next !\\",
  \\"source\\": \\"@site/docs/hello.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/\\",
  \\"permalink\\": \\"/docs/next/\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"/\\"
  },
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"bar\\",
    \\"permalink\\": \\"/docs/next/foo/barSlug\\"
  }
}",
  "site-docs-slugs-absolute-slug-md-4e8.json": "{
  \\"unversionedId\\": \\"slugs/absoluteSlug\\",
  \\"id\\": \\"slugs/absoluteSlug\\",
  \\"title\\": \\"absoluteSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/absoluteSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/absoluteSlug\\",
  \\"permalink\\": \\"/docs/next/absoluteSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"/absoluteSlug\\"
  }
}",
  "site-docs-slugs-relative-slug-md-d1c.json": "{
  \\"unversionedId\\": \\"slugs/relativeSlug\\",
  \\"id\\": \\"slugs/relativeSlug\\",
  \\"title\\": \\"relativeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/relativeSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/slugs/relativeSlug\\",
  \\"permalink\\": \\"/docs/next/slugs/relativeSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"relativeSlug\\"
  }
}",
  "site-docs-slugs-resolved-slug-md-02b.json": "{
  \\"unversionedId\\": \\"slugs/resolvedSlug\\",
  \\"id\\": \\"slugs/resolvedSlug\\",
  \\"title\\": \\"resolvedSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/resolvedSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/slugs/hey/resolvedSlug\\",
  \\"permalink\\": \\"/docs/next/slugs/hey/resolvedSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"./hey/ho/../resolvedSlug\\"
  }
}",
  "site-docs-slugs-try-to-escape-slug-md-70d.json": "{
  \\"unversionedId\\": \\"slugs/tryToEscapeSlug\\",
  \\"id\\": \\"slugs/tryToEscapeSlug\\",
  \\"title\\": \\"tryToEscapeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/tryToEscapeSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/tryToEscapeSlug\\",
  \\"permalink\\": \\"/docs/next/tryToEscapeSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"current\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"../../../../../../../../tryToEscapeSlug\\"
  }
}",
  "site-i-18-n-en-docusaurus-plugin-content-docs-version-1-0-0-hello-md-fe5.json": "{
  \\"unversionedId\\": \\"hello\\",
  \\"id\\": \\"version-1.0.0/hello\\",
  \\"title\\": \\"hello\\",
  \\"description\\": \\"Hello 1.0.0 ! (translated en)\\",
  \\"source\\": \\"@site/i18n/en/docusaurus-plugin-content-docs/version-1.0.0/hello.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/\\",
  \\"permalink\\": \\"/docs/1.0.0/\\",
  \\"tags\\": [],
  \\"version\\": \\"1.0.0\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"/\\"
  },
  \\"sidebar\\": \\"version-1.0.0/docs\\",
  \\"previous\\": {
    \\"title\\": \\"baz\\",
    \\"permalink\\": \\"/docs/1.0.0/foo/baz\\"
  }
}",
  "site-versioned-docs-version-1-0-0-foo-bar-md-7a6.json": "{
  \\"unversionedId\\": \\"foo/bar\\",
  \\"id\\": \\"version-1.0.0/foo/bar\\",
  \\"title\\": \\"bar\\",
  \\"description\\": \\"Bar 1.0.0 !\\",
  \\"source\\": \\"@site/versioned_docs/version-1.0.0/foo/bar.md\\",
  \\"sourceDirName\\": \\"foo\\",
  \\"slug\\": \\"/foo/barSlug\\",
  \\"permalink\\": \\"/docs/1.0.0/foo/barSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"1.0.0\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"barSlug\\"
  },
  \\"sidebar\\": \\"version-1.0.0/docs\\",
  \\"next\\": {
    \\"title\\": \\"baz\\",
    \\"permalink\\": \\"/docs/1.0.0/foo/baz\\"
  }
}",
  "site-versioned-docs-version-1-0-0-foo-baz-md-883.json": "{
  \\"unversionedId\\": \\"foo/baz\\",
  \\"id\\": \\"version-1.0.0/foo/baz\\",
  \\"title\\": \\"baz\\",
  \\"description\\": \\"Baz 1.0.0 ! This will be deleted in next subsequent versions.\\",
  \\"source\\": \\"@site/versioned_docs/version-1.0.0/foo/baz.md\\",
  \\"sourceDirName\\": \\"foo\\",
  \\"slug\\": \\"/foo/baz\\",
  \\"permalink\\": \\"/docs/1.0.0/foo/baz\\",
  \\"tags\\": [],
  \\"version\\": \\"1.0.0\\",
  \\"frontMatter\\": {},
  \\"sidebar\\": \\"version-1.0.0/docs\\",
  \\"previous\\": {
    \\"title\\": \\"bar\\",
    \\"permalink\\": \\"/docs/1.0.0/foo/barSlug\\"
  },
  \\"next\\": {
    \\"title\\": \\"hello\\",
    \\"permalink\\": \\"/docs/1.0.0/\\"
  }
}",
  "site-versioned-docs-version-1-0-1-foo-bar-md-7a3.json": "{
  \\"unversionedId\\": \\"foo/bar\\",
  \\"id\\": \\"version-1.0.1/foo/bar\\",
  \\"title\\": \\"bar\\",
  \\"description\\": \\"Bar 1.0.1 !\\",
  \\"source\\": \\"@site/versioned_docs/version-1.0.1/foo/bar.md\\",
  \\"sourceDirName\\": \\"foo\\",
  \\"slug\\": \\"/foo/bar\\",
  \\"permalink\\": \\"/docs/foo/bar\\",
  \\"tags\\": [],
  \\"version\\": \\"1.0.1\\",
  \\"frontMatter\\": {},
  \\"sidebar\\": \\"VersionedSideBarNameDoesNotMatter/docs\\",
  \\"next\\": {
    \\"title\\": \\"hello\\",
    \\"permalink\\": \\"/docs/\\"
  }
}",
  "site-versioned-docs-version-1-0-1-hello-md-0c7.json": "{
  \\"unversionedId\\": \\"hello\\",
  \\"id\\": \\"version-1.0.1/hello\\",
  \\"title\\": \\"hello\\",
  \\"description\\": \\"Hello 1.0.1 !\\",
  \\"source\\": \\"@site/versioned_docs/version-1.0.1/hello.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/\\",
  \\"permalink\\": \\"/docs/\\",
  \\"tags\\": [],
  \\"version\\": \\"1.0.1\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"/\\"
  },
  \\"sidebar\\": \\"VersionedSideBarNameDoesNotMatter/docs\\",
  \\"previous\\": {
    \\"title\\": \\"bar\\",
    \\"permalink\\": \\"/docs/foo/bar\\"
  }
}",
  "site-versioned-docs-version-with-slugs-root-absolute-slug-md-4d2.json": "{
  \\"unversionedId\\": \\"rootAbsoluteSlug\\",
  \\"id\\": \\"version-withSlugs/rootAbsoluteSlug\\",
  \\"title\\": \\"rootAbsoluteSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/rootAbsoluteSlug.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/rootAbsoluteSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/rootAbsoluteSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"withSlugs\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"/rootAbsoluteSlug\\"
  },
  \\"sidebar\\": \\"version-1.0.1/docs\\"
}",
  "site-versioned-docs-version-with-slugs-root-relative-slug-md-32a.json": "{
  \\"unversionedId\\": \\"rootRelativeSlug\\",
  \\"id\\": \\"version-withSlugs/rootRelativeSlug\\",
  \\"title\\": \\"rootRelativeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/rootRelativeSlug.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/rootRelativeSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/rootRelativeSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"withSlugs\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"rootRelativeSlug\\"
  }
}",
  "site-versioned-docs-version-with-slugs-root-resolved-slug-md-aee.json": "{
  \\"unversionedId\\": \\"rootResolvedSlug\\",
  \\"id\\": \\"version-withSlugs/rootResolvedSlug\\",
  \\"title\\": \\"rootResolvedSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/rootResolvedSlug.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/hey/rootResolvedSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/hey/rootResolvedSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"withSlugs\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"./hey/ho/../rootResolvedSlug\\"
  }
}",
  "site-versioned-docs-version-with-slugs-root-try-to-escape-slug-md-b5d.json": "{
  \\"unversionedId\\": \\"rootTryToEscapeSlug\\",
  \\"id\\": \\"version-withSlugs/rootTryToEscapeSlug\\",
  \\"title\\": \\"rootTryToEscapeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/rootTryToEscapeSlug.md\\",
  \\"sourceDirName\\": \\".\\",
  \\"slug\\": \\"/rootTryToEscapeSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/rootTryToEscapeSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"withSlugs\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"../../../../../../../../rootTryToEscapeSlug\\"
  }
}",
  "site-versioned-docs-version-with-slugs-slugs-absolute-slug-md-47a.json": "{
  \\"unversionedId\\": \\"slugs/absoluteSlug\\",
  \\"id\\": \\"version-withSlugs/slugs/absoluteSlug\\",
  \\"title\\": \\"absoluteSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/slugs/absoluteSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/absoluteSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/absoluteSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"withSlugs\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"/absoluteSlug\\"
  }
}",
  "site-versioned-docs-version-with-slugs-slugs-relative-slug-md-a95.json": "{
  \\"unversionedId\\": \\"slugs/relativeSlug\\",
  \\"id\\": \\"version-withSlugs/slugs/relativeSlug\\",
  \\"title\\": \\"relativeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/slugs/relativeSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/slugs/relativeSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/slugs/relativeSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"withSlugs\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"relativeSlug\\"
  }
}",
  "site-versioned-docs-version-with-slugs-slugs-resolved-slug-md-5a1.json": "{
  \\"unversionedId\\": \\"slugs/resolvedSlug\\",
  \\"id\\": \\"version-withSlugs/slugs/resolvedSlug\\",
  \\"title\\": \\"resolvedSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/slugs/resolvedSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/slugs/hey/resolvedSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/slugs/hey/resolvedSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"withSlugs\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"./hey/ho/../resolvedSlug\\"
  }
}",
  "site-versioned-docs-version-with-slugs-slugs-try-to-escape-slug-md-4e1.json": "{
  \\"unversionedId\\": \\"slugs/tryToEscapeSlug\\",
  \\"id\\": \\"version-withSlugs/slugs/tryToEscapeSlug\\",
  \\"title\\": \\"tryToEscapeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/slugs/tryToEscapeSlug.md\\",
  \\"sourceDirName\\": \\"slugs\\",
  \\"slug\\": \\"/tryToEscapeSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/tryToEscapeSlug\\",
  \\"tags\\": [],
  \\"version\\": \\"withSlugs\\",
  \\"frontMatter\\": {
    \\"slug\\": \\"../../../../../../../../tryToEscapeSlug\\"
  }
}",
  "tag-docs-next-tags-bar-tag-1-a8f.json": "{
  \\"name\\": \\"barTag 1\\",
  \\"permalink\\": \\"/docs/next/tags/bar-tag-1\\",
  \\"docs\\": [
    {
      \\"id\\": \\"foo/bar\\",
      \\"title\\": \\"bar\\",
      \\"description\\": \\"This is next version of bar.\\",
      \\"permalink\\": \\"/docs/next/foo/barSlug\\"
    }
  ],
  \\"allTagsPath\\": \\"/docs/next/tags\\"
}",
  "tag-docs-next-tags-bar-tag-2-216.json": "{
  \\"name\\": \\"barTag-2\\",
  \\"permalink\\": \\"/docs/next/tags/bar-tag-2\\",
  \\"docs\\": [
    {
      \\"id\\": \\"foo/bar\\",
      \\"title\\": \\"bar\\",
      \\"description\\": \\"This is next version of bar.\\",
      \\"permalink\\": \\"/docs/next/foo/barSlug\\"
    }
  ],
  \\"allTagsPath\\": \\"/docs/next/tags\\"
}",
  "tag-docs-next-tags-bar-tag-3-permalink-94a.json": "{
  \\"name\\": \\"barTag 3\\",
  \\"permalink\\": \\"/docs/next/tags/barTag-3-permalink\\",
  \\"docs\\": [
    {
      \\"id\\": \\"foo/bar\\",
      \\"title\\": \\"bar\\",
      \\"description\\": \\"This is next version of bar.\\",
      \\"permalink\\": \\"/docs/next/foo/barSlug\\"
    }
  ],
  \\"allTagsPath\\": \\"/docs/next/tags\\"
}",
  "tags-list-current-prop-15a.json": "[
  {
    \\"name\\": \\"barTag 1\\",
    \\"permalink\\": \\"/docs/next/tags/bar-tag-1\\",
    \\"count\\": 1
  },
  {
    \\"name\\": \\"barTag-2\\",
    \\"permalink\\": \\"/docs/next/tags/bar-tag-2\\",
    \\"count\\": 1
  },
  {
    \\"name\\": \\"barTag 3\\",
    \\"permalink\\": \\"/docs/next/tags/barTag-3-permalink\\",
    \\"count\\": 1
  }
]",
  "version-1-0-0-metadata-prop-608.json": "{
  \\"pluginId\\": \\"default\\",
  \\"version\\": \\"1.0.0\\",
  \\"label\\": \\"1.0.0\\",
  \\"banner\\": \\"unmaintained\\",
  \\"badge\\": true,
  \\"className\\": \\"docs-version-1.0.0\\",
  \\"isLast\\": false,
  \\"docsSidebars\\": {
    \\"version-1.0.0/docs\\": [
      {
        \\"type\\": \\"category\\",
        \\"collapsed\\": true,
        \\"collapsible\\": true,
        \\"label\\": \\"Test\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"bar\\",
            \\"href\\": \\"/docs/1.0.0/foo/barSlug\\",
            \\"docId\\": \\"foo/bar\\"
          },
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"baz\\",
            \\"href\\": \\"/docs/1.0.0/foo/baz\\",
            \\"docId\\": \\"foo/baz\\"
          }
        ]
      },
      {
        \\"type\\": \\"category\\",
        \\"collapsed\\": true,
        \\"collapsible\\": true,
        \\"label\\": \\"Guides\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"hello\\",
            \\"href\\": \\"/docs/1.0.0/\\",
            \\"docId\\": \\"hello\\"
          }
        ]
      }
    ]
  },
  \\"docs\\": {
    \\"foo/bar\\": {
      \\"id\\": \\"foo/bar\\",
      \\"title\\": \\"bar\\",
      \\"description\\": \\"Bar 1.0.0 !\\",
      \\"sidebar\\": \\"version-1.0.0/docs\\"
    },
    \\"foo/baz\\": {
      \\"id\\": \\"foo/baz\\",
      \\"title\\": \\"baz\\",
      \\"description\\": \\"Baz 1.0.0 ! This will be deleted in next subsequent versions.\\",
      \\"sidebar\\": \\"version-1.0.0/docs\\"
    },
    \\"hello\\": {
      \\"id\\": \\"hello\\",
      \\"title\\": \\"hello\\",
      \\"description\\": \\"Hello 1.0.0 ! (translated en)\\",
      \\"sidebar\\": \\"version-1.0.0/docs\\"
    }
  }
}",
  "version-1-0-1-metadata-prop-e87.json": "{
  \\"pluginId\\": \\"default\\",
  \\"version\\": \\"1.0.1\\",
  \\"label\\": \\"1.0.1\\",
  \\"banner\\": null,
  \\"badge\\": true,
  \\"className\\": \\"docs-version-1.0.1\\",
  \\"isLast\\": true,
  \\"docsSidebars\\": {
    \\"VersionedSideBarNameDoesNotMatter/docs\\": [
      {
        \\"type\\": \\"category\\",
        \\"collapsed\\": true,
        \\"collapsible\\": true,
        \\"label\\": \\"Test\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"bar\\",
            \\"href\\": \\"/docs/foo/bar\\",
            \\"docId\\": \\"foo/bar\\"
          }
        ]
      },
      {
        \\"type\\": \\"category\\",
        \\"collapsed\\": true,
        \\"collapsible\\": true,
        \\"label\\": \\"Guides\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"hello\\",
            \\"href\\": \\"/docs/\\",
            \\"docId\\": \\"hello\\"
          }
        ]
      }
    ]
  },
  \\"docs\\": {
    \\"foo/bar\\": {
      \\"id\\": \\"foo/bar\\",
      \\"title\\": \\"bar\\",
      \\"description\\": \\"Bar 1.0.1 !\\",
      \\"sidebar\\": \\"VersionedSideBarNameDoesNotMatter/docs\\"
    },
    \\"hello\\": {
      \\"id\\": \\"hello\\",
      \\"title\\": \\"hello\\",
      \\"description\\": \\"Hello 1.0.1 !\\",
      \\"sidebar\\": \\"VersionedSideBarNameDoesNotMatter/docs\\"
    }
  }
}",
  "version-current-metadata-prop-751.json": "{
  \\"pluginId\\": \\"default\\",
  \\"version\\": \\"current\\",
  \\"label\\": \\"Next\\",
  \\"banner\\": \\"unreleased\\",
  \\"badge\\": true,
  \\"className\\": \\"docs-version-current\\",
  \\"isLast\\": false,
  \\"docsSidebars\\": {
    \\"docs\\": [
      {
        \\"type\\": \\"category\\",
        \\"collapsed\\": true,
        \\"collapsible\\": true,
        \\"label\\": \\"Test\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"bar\\",
            \\"href\\": \\"/docs/next/foo/barSlug\\",
            \\"docId\\": \\"foo/bar\\"
          }
        ]
      },
      {
        \\"type\\": \\"category\\",
        \\"collapsed\\": true,
        \\"collapsible\\": true,
        \\"label\\": \\"Guides\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"hello\\",
            \\"href\\": \\"/docs/next/\\",
            \\"docId\\": \\"hello\\"
          }
        ]
      }
    ]
  },
  \\"docs\\": {
    \\"foo/bar\\": {
      \\"id\\": \\"foo/bar\\",
      \\"title\\": \\"bar\\",
      \\"description\\": \\"This is next version of bar.\\",
      \\"sidebar\\": \\"docs\\"
    },
    \\"hello\\": {
      \\"id\\": \\"hello\\",
      \\"title\\": \\"hello\\",
      \\"description\\": \\"Hello next !\\",
      \\"sidebar\\": \\"docs\\"
    },
    \\"slugs/absoluteSlug\\": {
      \\"id\\": \\"slugs/absoluteSlug\\",
      \\"title\\": \\"absoluteSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"slugs/relativeSlug\\": {
      \\"id\\": \\"slugs/relativeSlug\\",
      \\"title\\": \\"relativeSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"slugs/resolvedSlug\\": {
      \\"id\\": \\"slugs/resolvedSlug\\",
      \\"title\\": \\"resolvedSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"slugs/tryToEscapeSlug\\": {
      \\"id\\": \\"slugs/tryToEscapeSlug\\",
      \\"title\\": \\"tryToEscapeSlug\\",
      \\"description\\": \\"Lorem\\"
    }
  }
}",
  "version-with-slugs-metadata-prop-2bf.json": "{
  \\"pluginId\\": \\"default\\",
  \\"version\\": \\"withSlugs\\",
  \\"label\\": \\"withSlugs\\",
  \\"banner\\": \\"unmaintained\\",
  \\"badge\\": true,
  \\"className\\": \\"docs-version-withSlugs\\",
  \\"isLast\\": false,
  \\"docsSidebars\\": {
    \\"version-1.0.1/docs\\": [
      {
        \\"type\\": \\"category\\",
        \\"collapsed\\": true,
        \\"collapsible\\": true,
        \\"label\\": \\"Test\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"rootAbsoluteSlug\\",
            \\"href\\": \\"/docs/withSlugs/rootAbsoluteSlug\\",
            \\"docId\\": \\"rootAbsoluteSlug\\"
          }
        ]
      }
    ]
  },
  \\"docs\\": {
    \\"rootAbsoluteSlug\\": {
      \\"id\\": \\"rootAbsoluteSlug\\",
      \\"title\\": \\"rootAbsoluteSlug\\",
      \\"description\\": \\"Lorem\\",
      \\"sidebar\\": \\"version-1.0.1/docs\\"
    },
    \\"rootRelativeSlug\\": {
      \\"id\\": \\"rootRelativeSlug\\",
      \\"title\\": \\"rootRelativeSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"rootResolvedSlug\\": {
      \\"id\\": \\"rootResolvedSlug\\",
      \\"title\\": \\"rootResolvedSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"rootTryToEscapeSlug\\": {
      \\"id\\": \\"rootTryToEscapeSlug\\",
      \\"title\\": \\"rootTryToEscapeSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"slugs/absoluteSlug\\": {
      \\"id\\": \\"slugs/absoluteSlug\\",
      \\"title\\": \\"absoluteSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"slugs/relativeSlug\\": {
      \\"id\\": \\"slugs/relativeSlug\\",
      \\"title\\": \\"relativeSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"slugs/resolvedSlug\\": {
      \\"id\\": \\"slugs/resolvedSlug\\",
      \\"title\\": \\"resolvedSlug\\",
      \\"description\\": \\"Lorem\\"
    },
    \\"slugs/tryToEscapeSlug\\": {
      \\"id\\": \\"slugs/tryToEscapeSlug\\",
      \\"title\\": \\"tryToEscapeSlug\\",
      \\"description\\": \\"Lorem\\"
    }
  }
}",
}
`;

exports[`versioned website content: global data 1`] = `
Object {
  "pluginName": Object {
    "pluginId": Object {
      "path": "/docs",
      "versions": Array [
        Object {
          "docs": Array [
            Object {
              "id": "foo/bar",
              "path": "/docs/next/foo/barSlug",
              "sidebar": "docs",
            },
            Object {
              "id": "hello",
              "path": "/docs/next/",
              "sidebar": "docs",
            },
            Object {
              "id": "slugs/absoluteSlug",
              "path": "/docs/next/absoluteSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/relativeSlug",
              "path": "/docs/next/slugs/relativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/resolvedSlug",
              "path": "/docs/next/slugs/hey/resolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/tryToEscapeSlug",
              "path": "/docs/next/tryToEscapeSlug",
              "sidebar": undefined,
            },
          ],
          "isLast": false,
          "label": "Next",
          "mainDocId": "hello",
          "name": "current",
          "path": "/docs/next",
        },
        Object {
          "docs": Array [
            Object {
              "id": "foo/bar",
              "path": "/docs/foo/bar",
              "sidebar": "VersionedSideBarNameDoesNotMatter/docs",
            },
            Object {
              "id": "hello",
              "path": "/docs/",
              "sidebar": "VersionedSideBarNameDoesNotMatter/docs",
            },
          ],
          "isLast": true,
          "label": "1.0.1",
          "mainDocId": "hello",
          "name": "1.0.1",
          "path": "/docs",
        },
        Object {
          "docs": Array [
            Object {
              "id": "foo/bar",
              "path": "/docs/1.0.0/foo/barSlug",
              "sidebar": "version-1.0.0/docs",
            },
            Object {
              "id": "foo/baz",
              "path": "/docs/1.0.0/foo/baz",
              "sidebar": "version-1.0.0/docs",
            },
            Object {
              "id": "hello",
              "path": "/docs/1.0.0/",
              "sidebar": "version-1.0.0/docs",
            },
          ],
          "isLast": false,
          "label": "1.0.0",
          "mainDocId": "hello",
          "name": "1.0.0",
          "path": "/docs/1.0.0",
        },
        Object {
          "docs": Array [
            Object {
              "id": "rootAbsoluteSlug",
              "path": "/docs/withSlugs/rootAbsoluteSlug",
              "sidebar": "version-1.0.1/docs",
            },
            Object {
              "id": "rootRelativeSlug",
              "path": "/docs/withSlugs/rootRelativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "rootResolvedSlug",
              "path": "/docs/withSlugs/hey/rootResolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "rootTryToEscapeSlug",
              "path": "/docs/withSlugs/rootTryToEscapeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/absoluteSlug",
              "path": "/docs/withSlugs/absoluteSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/relativeSlug",
              "path": "/docs/withSlugs/slugs/relativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/resolvedSlug",
              "path": "/docs/withSlugs/slugs/hey/resolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/tryToEscapeSlug",
              "path": "/docs/withSlugs/tryToEscapeSlug",
              "sidebar": undefined,
            },
          ],
          "isLast": false,
          "label": "withSlugs",
          "mainDocId": "rootAbsoluteSlug",
          "name": "withSlugs",
          "path": "/docs/withSlugs",
        },
      ],
    },
  },
}
`;

exports[`versioned website content: route config 1`] = `
Array [
  Object {
    "component": "@theme/DocTagsListPage",
    "exact": true,
    "modules": Object {
      "tags": "~docs/tags-list-current-prop-15a.json",
    },
    "path": "/docs/next/tags",
  },
  Object {
    "component": "@theme/DocTagDocListPage",
    "exact": true,
    "modules": Object {
      "tag": "~docs/tag-docs-next-tags-bar-tag-1-a8f.json",
    },
    "path": "/docs/next/tags/bar-tag-1",
  },
  Object {
    "component": "@theme/DocTagDocListPage",
    "exact": true,
    "modules": Object {
      "tag": "~docs/tag-docs-next-tags-bar-tag-2-216.json",
    },
    "path": "/docs/next/tags/bar-tag-2",
  },
  Object {
    "component": "@theme/DocTagDocListPage",
    "exact": true,
    "modules": Object {
      "tag": "~docs/tag-docs-next-tags-bar-tag-3-permalink-94a.json",
    },
    "path": "/docs/next/tags/barTag-3-permalink",
  },
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-1-0-0-metadata-prop-608.json",
    },
    "path": "/docs/1.0.0",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/i18n/en/docusaurus-plugin-content-docs/version-1.0.0/hello.md",
        },
        "path": "/docs/1.0.0/",
        "sidebar": "version-1.0.0/docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-1.0.0/foo/bar.md",
        },
        "path": "/docs/1.0.0/foo/barSlug",
        "sidebar": "version-1.0.0/docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-1.0.0/foo/baz.md",
        },
        "path": "/docs/1.0.0/foo/baz",
        "sidebar": "version-1.0.0/docs",
      },
    ],
  },
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-current-metadata-prop-751.json",
    },
    "path": "/docs/next",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/hello.md",
        },
        "path": "/docs/next/",
        "sidebar": "docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/slugs/absoluteSlug.md",
        },
        "path": "/docs/next/absoluteSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/foo/bar.md",
        },
        "path": "/docs/next/foo/barSlug",
        "sidebar": "docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/slugs/resolvedSlug.md",
        },
        "path": "/docs/next/slugs/hey/resolvedSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/slugs/relativeSlug.md",
        },
        "path": "/docs/next/slugs/relativeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/slugs/tryToEscapeSlug.md",
        },
        "path": "/docs/next/tryToEscapeSlug",
      },
    ],
  },
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-with-slugs-metadata-prop-2bf.json",
    },
    "path": "/docs/withSlugs",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-withSlugs/slugs/absoluteSlug.md",
        },
        "path": "/docs/withSlugs/absoluteSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-withSlugs/rootResolvedSlug.md",
        },
        "path": "/docs/withSlugs/hey/rootResolvedSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-withSlugs/rootAbsoluteSlug.md",
        },
        "path": "/docs/withSlugs/rootAbsoluteSlug",
        "sidebar": "version-1.0.1/docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-withSlugs/rootRelativeSlug.md",
        },
        "path": "/docs/withSlugs/rootRelativeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-withSlugs/rootTryToEscapeSlug.md",
        },
        "path": "/docs/withSlugs/rootTryToEscapeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-withSlugs/slugs/resolvedSlug.md",
        },
        "path": "/docs/withSlugs/slugs/hey/resolvedSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-withSlugs/slugs/relativeSlug.md",
        },
        "path": "/docs/withSlugs/slugs/relativeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-withSlugs/slugs/tryToEscapeSlug.md",
        },
        "path": "/docs/withSlugs/tryToEscapeSlug",
      },
    ],
  },
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-1-0-1-metadata-prop-e87.json",
    },
    "path": "/docs",
    "priority": -1,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-1.0.1/hello.md",
        },
        "path": "/docs/",
        "sidebar": "VersionedSideBarNameDoesNotMatter/docs",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-1.0.1/foo/bar.md",
        },
        "path": "/docs/foo/bar",
        "sidebar": "VersionedSideBarNameDoesNotMatter/docs",
      },
    ],
  },
]
`;

exports[`versioned website content: withSlugs version sidebars 1`] = `
Object {
  "version-1.0.1/docs": Array [
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "id": "version-withSlugs/rootAbsoluteSlug",
          "type": "doc",
        },
      ],
      "label": "Test",
      "link": undefined,
      "type": "category",
    },
  ],
}
`;
